tests/reference/asr-arrays_11-fc505b4.stderr
semantic error: Type mismatch in annotation-assignment, the types must be compatible
 --> tests/errors/arrays_11.py:5:1
  |
5 | x: i16[4] = empty([5], dtype=int16)
  | ^           ^^^^^^^^^^^^^^^^^^^^^^^ type mismatch ('i16[4]' and 'i16[5]')
